--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -1,51 +1,92 @@
 .container {
-  max-width: 80%;
+  max-width: 100%;
   margin: 0 auto;
 }
 
 .row {
   display: flex;
+  font-family: avenir, sans-serif;
 }
 
 .column-half {
   flex-basis: calc(100% / 2);
-  padding-top: 20px;
+  padding-top: 1.25rem;
+}
+
+.column-full {
+  flex-basis: calc(100% / 1);
+
+  /* Just trying this out... */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header-links {
   display: flex;
   justify-content: space-around;
   align-items: baseline;
-  padding-right: 32px;
+  padding-right: 2rem;
+  margin-bottom: 2rem;
 }
 
 .link-header {
   color: #a0a0a0;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 1.2rem;
 }
 
 .header-logo {
   justify-content: flex-start;
-  padding-left: 50px;
+  padding-left: 3.125rem;
   max-width: 30%;
 }
 
 .contact-button {
-  width: 118px;
-  height: 50px;
-  font-size: 18px;
-  border-radius: 10%;
+  width: 8.5rem;
+  height: 3.125rem;
+  font-size: 1.12rem;
+  border-radius: 5%;
   background-color: #2a4464;
   color: #ffff;
+  padding: 0.5rem;
 }
 
 .center-row {
-  border: 2px solid #fafafa;
-  padding: 80px;
+  border-top: 0.01rem solid #a0a0a0;
+  padding-top: 5rem;
 }
 
 .hero-img {
-  flex-basis: 50%;
   justify-content: center;
+  align-items: center;
+  padding-top: 1rem;
+}
+
+.center-row-header {
+  line-height: 3rem;
+  color: #ffff;
+}
+
+.center-row-text {
+  position: relative;
+  right: 1500px;
+  bottom: 300px;
+  justify-content: center;
+  max-height: 20%;
+  max-width: 15%;
+  color: #ffff;
+  font-size: 1.25rem;
+  line-height: 2rem;
+}
+
+.get-started-button {
+  width: 11rem;
+  height: 3.125rem;
+  font-size: 1.12rem;
+  border-radius: 5%;
+  background-color: #2a4464;
+  color: #ffff;
+  letter-spacing: 0.1rem;
+  margin-top: 0.5rem;
 }
