css-position with requested changes

--- a/css-positioning/absolute.css
+++ b/css-positioning/absolute.css
@@ -32,8 +32,8 @@
 .overlay {
   background: linear-gradient(transparent, rgba(0, 0, 0, 0.75));
   position: absolute;
-  bottom: 2px;
-  top: 2px;
-  left: 2px;
-  right: 2px;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
 }
