--- a/css-positioning/relative.css
+++ b/css-positioning/relative.css
@@ -11,9 +11,9 @@
 }
 
 #bulbasaur {
-  /* position: relative;
+  position: relative;
   top: 30px;
-  right: 30px; */
+  right: 30px;
 }
 
 #charmander {
